# big-number-calculator-gmp-mpfr

./: CMakeLists.txt  README.md  big-number-calculator-gmp-mpfr.pro
libraries/include/: gmp.h
libraries/mac/gmp/: libgmp.10.dylib
libraries/mac/gmp/pre-built_gmp/: gmp-6.2.1-x64-mac.tar.gz.md5
libraries/mac/mpfr/: libmpfr.6.dylib
libraries/mac/mpfr/pre-built_mpfr/: mpfr-4.1.0-x64-mac.tar.gz.md5
libraries/src/: gmp-6.2.1.tar.bz2.sig  gmp-man-6.2.1.pdf.md5  mpfr-4.1.0.tar.gz.asc  mpfr-4.1.0.tar.gz.md5  mpfr.pdf.md5
libraries/unix/gmp/: libgmp.so.10.4.1
libraries/unix/gmp/pre-built_gmp/: gmp-6.2.1-x64-linux.tar.gz.md5
libraries/unix/mpfr/: libmpfr.so.6.1.0
libraries/unix/mpfr/pre-built_mpfr/: mpfr-4.1.0-x64-linux.tar.gz.md5
libraries/win/gmp/pre-built_gmp/: gmp-6.2.1-x64-win.zip.md5
libraries/win/mpfr/pre-built_mpfr/: mpfr-4.1.0-x64-win.zip.md5
resources/: resource.qrc  resource_win.rc
resources/images/: hash-icon.ai  hash-icon.icns
src/: common_functions.cpp  common_functions.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_widgets.cpp  widgets_reimplement.cpp  widgets_reimplement.h  worker.cpp  worker.h
